--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
     "react-router-dom": "^6.12.1"
   },
   "devDependencies": {
-    "vite": "^4.5.0",
-    "tailwindcss": "^3.4.1",
+    "@vitejs/plugin-react": "^4.5.2",
+    "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
-    "autoprefixer": "^10.4.13"
+    "tailwindcss": "^3.4.1",
+    "vite": "^4.5.0"
   }
 }
